  * HDD_GetInodeByRelFileName: renamed to HDD_GetInodeByFileName

Deleted functions:
  * ELFOpenAbsFile: use ELFOpenFile
  * ExtAttribExistsAbsPath: use ExtAttribExists
  * ExtAttribGetAbsPath: use ExtAttribGet
  * ExtAttribRemoveAbsPath: use ExtAttribRemove
  * ExtAttribSetAbsPath: use ExtAttribSet
  * HDD_GetFileTimeByAbsFileName: use HDD_GetFileTimeByFileName
  * HDD_GetInodeByAbsFileName: use HDD_GetInodeByFileName
  * HDD_MoveAbs: use HDD_Move
  * HDD_TAP_GetInfoByAbsPath: use HDD_TAP_GetInfo
  * infData_DeleteAbs: use infData_Delete
  * infData_GetAbs: use infData_Get
  * infData_GetNameByIndexAbs: use infData_GetNameByIndex
  * infData_isAvailAbs: use infData_isAvail
  * infData_SetAbs: use infData_Set
  * MakeUniqueFileNameAbs: use MakeUniqueFileName
  * MD5AbsFile: use MD5File
  * PlayMediaFileAbs: use PlayMediaFile

The following functions accept any form a path. The INI and language INI functions are not yet converted:

  CallTraceExportStats, ELFOpenFile, ExtAttribExists, ExtAttribGet, ExtAttribRemove, ExtAttribSet, FixInvalidFileName, FM_LoadFontFile, FMUC_LoadFontFile,
  HDD_ChangeDir, HDD_Delete, HDD_FappendOpen, HDD_FindMountPoint, HDD_GetFileSizeAndInode, HDD_GetFileTimeByRelFileName, HDD_GetInodeByRelFileName, HDD_InfBlockGet,
  HDD_InfBlockSet, HDD_isFileInUse, HDD_isRecFileName, HDD_MakeNewRecName, HDD_Move, HDD_Recycle, HDD_RecycleSF, HDD_RemoveDir, HDD_Rename, HDD_TAP_GetIDByFileName,
  HDD_TAP_GetInfo, HDD_TAP_Start, HDD_Unrecycle, HDD_UnrecycleSF, infData_Delete, infData_Get, infData_GetNameByIndex, infData_isAvail, infData_OpenFileAbs, infData_Set,
  infData_TruncateAbs, LogEntry, LogEntryPrintf, MakeUniqueFileName, MD5File, PlayMediaFile, SaveBitmap, SeparateFileNameComponents, SeparatePathComponents, StringDBLoad,
  StringDBSave, ValidFileName


2014-03-22: Fixed: PlayMediaFile() created a path with a double // after the last folder name
2014-03-28: Fixed: infData*() doesn't enforce a file name with .inf at the end anymore